--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -205,8 +205,8 @@
 	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	  // ga('create', 'UA-48469506-1', 'andrewlab8.herokuapp.com');
-	  ga('create', 'UA-48469506-1', { 'cookieDomain': 'none'});
+	  ga('create', 'UA-48469506-1', 'andrewlab8.herokuapp.com');
+	  // ga('create', 'UA-48469506-1', { 'cookieDomain': 'none'});
 	  ga('send', 'pageview');
 
 	</script>
